src/test/ui/unwind-abis/feature-gate-c-unwind.stderr
error[E0658]: C-unwind ABI is experimental and subject to change
  --> $DIR/feature-gate-c-unwind.rs:4:8
   |
LL | extern "C-unwind" fn f() {}
   |        ^^^^^^^^^^
   |
   = note: see issue #74990 <https://github.com/rust-lang/rust/issues/74990> for more information
   = help: add `#![feature(c_unwind)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
